--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/styles/styles.css">
+    <title>Dan Boothe</title>
 </head>
+
 <body>
     <!--Header-->
     <header>
@@ -12,7 +14,7 @@
 
         <nav>
             <ul>
-                <li"><a href="#About">About Me</a></li>
+                <li><a href="#About">About Me</a></li>
                 <li><a href="#Projects">Projects</a></li>
                 <li><a href="#Contact">Contact Me</a></li>
             </ul>
@@ -22,7 +24,6 @@
     <!--Hero-->
     <section class="hero">
         <img src="./assets/images/SLC.jpeg" alt="">
-        <img src="./assets/images/placeholder1.png" alt="">
     </section>
 
     <!--About Me-->
