hero style and pictures

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!--Hero-->
     <section class="hero">
-        <img src="./assets/images/SLC.jpeg" alt="">
+        <img src="./assets/images/placeholder1.png" alt="">
     </section>
 
     <!--About Me-->
