--- a/index.html
+++ b/index.html
@@ -21,32 +21,88 @@
 
     <!--Hero-->
     <section class="hero">
-            <img src="./assets/images/placeholder1.png" alt="">
+        <div class="me">
+            <img src="./assets/images/placeholder1.png" alt="" height="75%">
             <h1>Dan Boothe</h1>
+            <p>Full Stack Web Developer</p>
+        </div>
     </section>
 
     <!--About Me-->
-    <section id="About">
+    <section id="About" class="main-layout">
         <h2>About Me</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis qui atque praesentium optio magni 
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis qui atque praesentium optio magni 
             iusto! Praesentium, quaerat harum veniam molestiae obcaecati eligendi laborum deleniti voluptas pariatur 
             aspernatur necessitatibus cum illo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, libero 
             doloribus, et incidunt expedita consectetur deserunt natus quibusdam earum reprehenderit illo ut obcaecati 
-            nemo ea molestias voluptates at nisi provident.Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis qui atque praesentium optio magni 
-            iusto! Praesentium, quaerat harum veniam molestiae obcaecati eligendi laborum deleniti voluptas pariatur 
-            aspernatur necessitatibus cum illo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, libero 
-            doloribus, et incidunt expedita consectetur deserunt natus quibusdam earum reprehenderit illo ut obcaecati 
-            nemo ea molestias voluptates at nisi provident.</p>
+            nemo ea molestias voluptates at nisi provident.Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Perferendis qui atque praesentium optio magni iusto! Praesentium, quaerat harum veniam molestiae obcaecati 
+            eligendi laborum deleniti voluptas pariatur aspernatur necessitatibus cum illo? Lorem ipsum dolor sit amet 
+            consectetur adipisicing elit. Vel, libero doloribus, et incidunt expedita consectetur deserunt natus 
+            quibusdam earum reprehenderit illo ut obcaecati nemo ea molestias voluptates at nisi provident.
+        </p>
     </section>
 
     <!--Projects-->   
-    <section id="Projects">
-        <h2>Projects</h2> 
+    <section id="Projects" class="main-layout">
+        <h2>Projects</h2>
+        <div>
+            <div class="projects">
+                <h3>Super Cool Project          0000-0000</h3>
+                <p>
+                    I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
+                    It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
+                    more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
+                    pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
+                    More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
+                    This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
+                    taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
+                    doctored photos.
+                </p>
+
+                <h3>Super Cool Project          0000-0000</h3>
+                <p>
+                    I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
+                    It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
+                    more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
+                    pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
+                    More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
+                    This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
+                    taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
+                    doctored photos.
+                </p>
+
+                <h3>Super Cool Project          0000-0000</h3>
+                <p>
+                    I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
+                    It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
+                    more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
+                    pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
+                    More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
+                    This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
+                    taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
+                    doctored photos.
+                </p>
+
+                <h3>Super Cool Project          0000-0000</h3>
+                <p>
+                    I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
+                    It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
+                    more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
+                    pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
+                    More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
+                    This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
+                    taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
+                    doctored photos.
+                </p>
+            </div>
+        </div>
     </section>
 
     <!--Contact Me-->
-    <section id="Contact">
+    <section id="Contact" class="main-layout">
         <h2>Contact me</h2>
     </section>
 </body>
