--- a/index.html
+++ b/index.html
@@ -33,15 +33,14 @@
         <h2>About Me</h2>
 
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis qui atque praesentium optio magni 
-            iusto! Praesentium, quaerat harum veniam molestiae obcaecati eligendi laborum deleniti voluptas pariatur 
-            aspernatur necessitatibus cum illo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, libero 
-            doloribus, et incidunt expedita consectetur deserunt natus quibusdam earum reprehenderit illo ut obcaecati 
-            nemo ea molestias voluptates at nisi provident.Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Perferendis qui atque praesentium optio magni iusto! Praesentium, quaerat harum veniam molestiae obcaecati 
-            eligendi laborum deleniti voluptas pariatur aspernatur necessitatibus cum illo? Lorem ipsum dolor sit amet 
-            consectetur adipisicing elit. Vel, libero doloribus, et incidunt expedita consectetur deserunt natus 
-            quibusdam earum reprehenderit illo ut obcaecati nemo ea molestias voluptates at nisi provident.
+            I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
+            It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
+            more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
+            pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
+            More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
+            This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
+            taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
+            doctored photos.
         </p>
     </section>
 
@@ -104,6 +103,29 @@
     <!--Contact Me-->
     <section id="Contact" class="main-layout">
         <h2>Contact me</h2>
+
+        <form class="contact">
+            <label for="name">Name:</label>
+            <input type="text" placeholder="Your Name" name="name" id="name">
+            <label for="email">Email:</label>
+            <input type="email" placeholder="Your Email" name="email" id="email">
+            <label for="message">Message:</label>
+            <textarea placeholder="Your Message Here" name="message" id="message" cols="30" rows="10"></textarea>
+            </br>
+            <button type="submit">Let's Chat!</button>
+        </form>
     </section>
+
+    <!--Footer-->
+    <footer class="footer">
+        <h2>Created by Dan Boothe</h2>
+
+        <div>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/danbraunbergerdeveloper/" target="_blank">Linked In</a></li>
+                <li><a href="https://github.com/dboothe92" target="-blank">Github</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
