--- a/index.html
+++ b/index.html
@@ -47,56 +47,54 @@
     <!--Projects-->   
     <section id="Projects" class="main-layout">
         <h2>Projects</h2>
-        <div>
-            <div class="projects">
-                <h3>Super Cool Project          0000-0000</h3>
-                <p>
-                    I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
-                    It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
-                    more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
-                    pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
-                    More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
-                    This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
-                    taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
-                    doctored photos.
-                </p>
+        <div class="projects">
+            <h3>Super Cool Project          0000-0000</h3>
+            <p>
+                I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
+                It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
+                more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
+                pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
+                More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
+                This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
+                taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
+                doctored photos.
+            </p>
 
-                <h3>Super Cool Project          0000-0000</h3>
-                <p>
-                    I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
-                    It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
-                    more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
-                    pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
-                    More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
-                    This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
-                    taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
-                    doctored photos.
-                </p>
+            <h3>Super Cool Project          0000-0000</h3>
+            <p>
+                I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
+                It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
+                more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
+                pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
+                More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
+                This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
+                taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
+                doctored photos.
+            </p>
 
-                <h3>Super Cool Project          0000-0000</h3>
-                <p>
-                    I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
-                    It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
-                    more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
-                    pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
-                    More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
-                    This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
-                    taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
-                    doctored photos.
-                </p>
+            <h3>Super Cool Project          0000-0000</h3>
+            <p>
+                I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
+                It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
+                more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
+                pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
+                More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
+                This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
+                taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
+                doctored photos.
+            </p>
 
-                <h3>Super Cool Project          0000-0000</h3>
-                <p>
-                    I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
-                    It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
-                    more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
-                    pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
-                    More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
-                    This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
-                    taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
-                    doctored photos.
-                </p>
-            </div>
+            <h3>Super Cool Project          0000-0000</h3>
+            <p>
+                I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
+                It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
+                more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
+                pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
+                More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
+                This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
+                taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
+                doctored photos.
+            </p>
         </div>
     </section>
 
@@ -110,7 +108,7 @@
             <label for="email">Email:</label>
             <input type="email" placeholder="Your Email" name="email" id="email">
             <label for="message">Message:</label>
-            <textarea placeholder="Your Message Here" name="message" id="message" cols="30" rows="10"></textarea>
+            <textarea placeholder="Your Message Here" name="message" id="message" ></textarea>
             </br>
             <button type="submit">Let's Chat!</button>
         </form>
