--- a/index.html
+++ b/index.html
@@ -2,128 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/styles.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/syle.css">
+    
     <title>Dan Boothe</title>
 </head>
-
 <body>
-    <!--Header-->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#About">About Me</a></li>
-                <li><a href="#Projects">Projects</a></li>
-                <li><a href="#Contact">Contact Me</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!--Hero-->
-    <section class="hero">
-        <div class="me">
-            <img src="./assets/images/placeholder1.png" alt="" height="75%">
-            <h1>Dan Boothe</h1>
-            <p>Full Stack Web Developer</p>
+    <div class="row">
+        <div class="col-3">
+            <div class="row">
+                <div class="col-12">
+                    <img src="./assets/images/placeholder1.png" alt="An image of the most handsome mans in the world" class="w-75">
+                </div>
+            </div>
         </div>
-    </section>
+        <div class="col-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat impedit laudantium blanditiis odio, inventore nisi ipsum voluptatum ex eius aliquam reiciendis ratione temporibus doloribus dicta aperiam optio non ipsam. Nam.</div>
+    </div>
 
-    <!--About Me-->
-    <section id="About" class="main-layout">
-        <h2>About Me</h2>
-
-        <p>
-            I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
-            It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
-            more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
-            pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
-            More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
-            This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
-            taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
-            doctored photos.
-        </p>
-    </section>
-
-    <!--Projects-->   
-    <section id="Projects" class="main-layout">
-        <h2>Projects</h2>
-        <div class="projects">
-            <h3>Super Cool Project          0000-0000</h3>
-            <p>
-                I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
-                It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
-                more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
-                pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
-                More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
-                This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
-                taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
-                doctored photos.
-            </p>
-
-            <h3>Super Cool Project          0000-0000</h3>
-            <p>
-                I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
-                It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
-                more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
-                pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
-                More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
-                This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
-                taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
-                doctored photos.
-            </p>
-
-            <h3>Super Cool Project          0000-0000</h3>
-            <p>
-                I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
-                It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
-                more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
-                pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
-                More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
-                This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
-                taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
-                doctored photos.
-            </p>
-
-            <h3>Super Cool Project          0000-0000</h3>
-            <p>
-                I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a pinch on that one. See that? 
-                It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. More pollen, more flowers, 
-                more nectar, more honey for us I pick up some pollen here, sprinkle it over here. Maybe a dash over there, a 
-                pinch on that one. See that? It's a little bit of magic. That's amazing. Why do we do that? That's pollen power. 
-                More pollen, more flowers, more nectar, more honey for us. Our honey is being brazenly stolen on a massive scale! 
-                This is worse than anything bears have done! I intend to do something. Oh, Barry, stop. Who told you humans are 
-                taking our honey? That's a rumor. Do these look like rumors? That's a conspiracy theory. These are obviously 
-                doctored photos.
-            </p>
-        </div>
-    </section>
-
-    <!--Contact Me-->
-    <section id="Contact" class="main-layout">
-        <h2>Contact me</h2>
-
-        <form class="contact">
-            <label for="name">Name:</label>
-            <input type="text" placeholder="Your Name" name="name" id="name">
-            <label for="email">Email:</label>
-            <input type="email" placeholder="Your Email" name="email" id="email">
-            <label for="message">Message:</label>
-            <textarea placeholder="Your Message Here" name="message" id="message" ></textarea>
-            </br>
-            <button type="submit">Let's Chat!</button>
-        </form>
-    </section>
-
-    <!--Footer-->
-    <footer class="footer">
-        <h2>Created by Dan Boothe</h2>
-
-        <div>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/danbraunbergerdeveloper/" target="_blank">Linked In</a></li>
-                <li><a href="https://github.com/dboothe92" target="-blank">Github</a></li>
-            </ul>
-        </div>
-    </footer>
+    
+    <!--Let's link some javascript here.-->
+    <script></script>
 </body>
 </html>
